Resolved Alignment of scrollTop button: profile page

--- a/src/index.css
+++ b/src/index.css
@@ -173,6 +173,7 @@ input:focus {
   opacity: 0.9;
 }
 
+
 .scrollTop:hover {
   opacity: 1;
 }
@@ -205,6 +206,10 @@ input:focus {
     left: 46.6%;
   }
 
+  .sideToTop {
+    left: 19.6%;
+  }
+
   .app__newpost__button {
     left: -4.2%;
   }
@@ -216,6 +221,10 @@ input:focus {
     left: 47.2%;
   }
 
+  .sideToTop {
+    left: 19.6%;
+  }
+
   .app__newpost__button {
     left: -2.5%;
   }
@@ -225,6 +234,10 @@ input:focus {
 @media only screen and (min-width: 1200px) {
   .scrollTop {
     left: 47.7%;
+  }
+
+  .sideToTop {
+    left: 19.6%;
   }
 
   .app__newpost__button {
@@ -373,4 +386,5 @@ input {
   border-bottom: 2px solid rgb(104, 85, 224);
   cursor: pointer;
 }
+
 /* end */
